2006-08-4  Frode Lindeijer  <f.lindeijer@gmail.com>

	* data/graphics/tiles/desert_x3.png: Replaced the old cactus with
	a nice new high-res one.

2006-08-03  Bjørn Lindeijer  <bjorn@lindeijer.nl>

	* src/player.cpp, src/being.cpp, src/being.h: Removed three
	setDirection(mDirection) calls by instead specifically setting the
	current direction on the newly added animated sprite. The same might
	be done for the action later.
	* src/animatedsprite.h, src/animatedsprite.cpp: Since this class isn't
	subclassed and has no virtual functions, make protected members
	private. Also added a start of a reset function which could be a
	solution to unsynchronized animated sprites.
	* src/net/network.cpp: Fixed two delete/delete[] errors.

2006-08-01  Philipp Sehmisch  <tmw@crushnet.org>

	* src/animation.h, src/animation.cpp, src/animatedsprite.h,
	src/animatedsprite.cpp, src/being.cpp: Animations and directions
	are now passed and stored as enums and no longer as strings.

2006-07-30  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/animatedsprite.h, src/animatedsprite.cpp: Unified the play
	methods.

2006-07-30  Philipp Sehmisch  <tmw@crushnet.org>

	* data/maps/new_5-1.tmx.gz: Fixed two minor mapping errors (no new
	walkmap required).

2006-07-29  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/animatedsprite.h, src/animatedsprite.cpp, src/animation.cpp: A
	bunch of cleanups.
	* src/animation.h, src/animatedsprite.cpp: Moved included from header
	to source file.

2006-07-28  Björn Steinbrink  <B.Steinbrink@gmx.de>

	* src/npc.cpp, src/player.cpp, src/animatedsprite.h, src/animation.h,
	src/being.cpp, src/main.cpp, src/monster.cpp, src/animatedsprite.cpp,
	src/animation.cpp, src/Makefile.am, src/being.h: Moved AnimatedSprite
	into its own files, removed useless includes.
	* src/engine.cpp: Removed an unused var.

2006-07-26  Eugenio Favalli  <elvenprogrammer@gmail.com>

	* data/graphics/sprites/Makefile.am, data/graphics/tiles/Makefile.am,